--- a/driver-orders.html
+++ b/driver-orders.html
@@ -15,6 +15,7 @@
             --background-color: #f9f9f9;
             --text-color: #333;
             --white: #ffffff;
+            --shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
 
         * {
@@ -56,6 +57,14 @@
         .logo {
             font-size: 1.5rem;
             font-weight: bold;
+            color: var(--white);
+            text-decoration: none;
+            display: flex;
+            align-items: center;
+        }
+
+        .logo i {
+            margin-right: 10px;
         }
 
         nav ul {
@@ -82,6 +91,11 @@
             padding: 20px;
         }
 
+        h2 {
+            margin-bottom: 20px;
+            color: var(--primary-color);
+        }
+
         .orders-container {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -91,13 +105,14 @@
         .order-card {
             background-color: var(--white);
             border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            box-shadow: var(--shadow);
             padding: 20px;
-            transition: transform 0.3s ease;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
         .order-card:hover {
             transform: translateY(-5px);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
         }
 
         .order-card h3 {
@@ -123,16 +138,34 @@
             color: var(--primary-color);
             text-decoration: none;
             border-radius: 5px;
-            transition: background-color 0.3s ease;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+            text-align: center;
+            margin-top: 10px;
         }
 
         .btn:hover {
             background-color: #e68a00;
+            transform: translateY(-2px);
         }
 
         @media (max-width: 768px) {
             .orders-container {
                 grid-template-columns: 1fr;
+            }
+
+            nav {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+
+            nav ul {
+                margin-top: 10px;
+                flex-direction: column;
+            }
+
+            nav ul li {
+                margin-left: 0;
+                margin-bottom: 10px;
             }
         }
     </style>
@@ -140,7 +173,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo"><i class="fas fa-shipping-fast"></i> ErrandEase Driver</div>
+            <a href="index.html" class="logo"><i class="fas fa-shipping-fast"></i> ErrandEase Driver</a>
             <ul>
                 <li><a href="#available-orders">Available Orders</a></li>
                 <li><a href="#active-orders">Active Orders</a></li>
