--- a/driver-orders.html
+++ b/driver-orders.html
@@ -34,39 +34,47 @@
         .dashboard {
             display: flex;
             height: 100vh;
+            flex-direction: column;
         }
 
         .sidebar {
-            width: 250px;
             background-color: var(--gray-800);
             color: var(--white);
-            padding: 1.5rem;
+            padding: 1rem;
         }
 
         .sidebar h1 {
-            font-size: 1.5rem;
+            font-size: 1.25rem;
             font-weight: bold;
-            margin-bottom: 2rem;
+            margin-bottom: 1rem;
         }
 
         .sidebar nav ul {
             list-style-type: none;
+            display: flex;
+            justify-content: space-between;
         }
 
         .sidebar nav ul li {
-            margin-bottom: 1rem;
+            flex: 1;
+            margin-right: 0.5rem;
+        }
+
+        .sidebar nav ul li:last-child {
+            margin-right: 0;
         }
 
         .sidebar nav ul li button {
             width: 100%;
-            text-align: left;
-            padding: 0.5rem 1rem;
+            text-align: center;
+            padding: 0.5rem;
             background: none;
             border: none;
             color: var(--white);
             cursor: pointer;
             border-radius: 0.25rem;
             transition: background-color 0.3s;
+            font-size: 0.875rem;
         }
 
         .sidebar nav ul li button:hover,
@@ -77,12 +85,16 @@
         .main-content {
             flex: 1;
             overflow-y: auto;
+            -webkit-overflow-scrolling: touch;
         }
 
         header {
             background-color: var(--white);
             padding: 1rem;
             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+            position: sticky;
+            top: 0;
+            z-index: 10;
         }
 
         header h2 {
@@ -91,55 +103,57 @@
         }
 
         main {
-            padding: 1.5rem;
+            padding: 1rem;
         }
 
         .earnings-chart {
             background-color: var(--white);
-            padding: 1.5rem;
+            padding: 1rem;
             border-radius: 0.5rem;
             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-            margin-bottom: 1.5rem;
+            margin-bottom: 1rem;
         }
 
         .earnings-chart h3 {
-            font-size: 1.125rem;
+            font-size: 1rem;
             font-weight: 600;
-            margin-bottom: 1rem;
+            margin-bottom: 0.5rem;
         }
 
         .orders-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 1.5rem;
+            grid-template-columns: 1fr;
+            gap: 1rem;
         }
 
         .order-card {
             background-color: var(--white);
             border-radius: 0.5rem;
             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-            padding: 1.5rem;
+            padding: 1rem;
         }
 
         .order-card h3 {
-            font-size: 1.125rem;
+            font-size: 1rem;
             font-weight: 600;
             margin-bottom: 0.5rem;
         }
 
         .order-card p {
             margin-bottom: 0.5rem;
+            font-size: 0.875rem;
         }
 
         .order-card ul {
             list-style-type: disc;
-            padding-left: 1.5rem;
-            margin-bottom: 1rem;
+            padding-left: 1.25rem;
+            margin-bottom: 0.5rem;
+            font-size: 0.875rem;
         }
 
         .map-container {
-            height: 200px;
-            margin-bottom: 1rem;
+            height: 150px;
+            margin-bottom: 0.5rem;
         }
 
         .btn {
@@ -153,7 +167,7 @@
             border: none;
             cursor: pointer;
             width: 100%;
-            font-size: 1rem;
+            font-size: 0.875rem;
         }
 
         .btn:hover {
@@ -168,23 +182,79 @@
             background-color: #059669;
         }
 
-        @media (max-width: 768px) {
+        @media (min-width: 640px) {
             .dashboard {
-                flex-direction: column;
+                flex-direction: row;
             }
 
             .sidebar {
-                width: 100%;
-                padding: 1rem;
+                width: 250px;
+                padding: 1.5rem;
             }
 
             .sidebar h1 {
-                font-size: 1.25rem;
+                font-size: 1.5rem;
+                margin-bottom: 2rem;
+            }
+
+            .sidebar nav ul {
+                flex-direction: column;
+            }
+
+            .sidebar nav ul li {
+                margin-right: 0;
                 margin-bottom: 1rem;
             }
 
+            .sidebar nav ul li button {
+                text-align: left;
+                padding: 0.5rem 1rem;
+                font-size: 1rem;
+            }
+
             .main-content {
-                height: calc(100vh - 200px);
+                height: 100vh;
+            }
+
+            main {
+                padding: 1.5rem;
+            }
+
+            .earnings-chart {
+                padding: 1.5rem;
+                margin-bottom: 1.5rem;
+            }
+
+            .earnings-chart h3 {
+                font-size: 1.125rem;
+                margin-bottom: 1rem;
+            }
+
+            .orders-grid {
+                grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+                gap: 1.5rem;
+            }
+
+            .order-card {
+                padding: 1.5rem;
+            }
+
+            .order-card h3 {
+                font-size: 1.125rem;
+            }
+
+            .order-card p,
+            .order-card ul {
+                font-size: 1rem;
+            }
+
+            .map-container {
+                height: 200px;
+                margin-bottom: 1rem;
+            }
+
+            .btn {
+                font-size: 1rem;
             }
         }
     </style>
@@ -195,9 +265,9 @@
             <h1>ErrandEase Driver</h1>
             <nav>
                 <ul>
-                    <li><button id="available-tab" class="active">Available Orders</button></li>
-                    <li><button id="active-tab">Active Orders</button></li>
-                    <li><button id="completed-tab">Completed Orders</button></li>
+                    <li><button id="available-tab" class="active">Available</button></li>
+                    <li><button id="active-tab">Active</button></li>
+                    <li><button id="completed-tab">Completed</button></li>
                 </ul>
             </nav>
         </div>
@@ -344,6 +414,8 @@
                     }]
                 },
                 options: {
+                    responsive: true,
+                    maintainAspectRatio: false,
                     scales: {
                         y: {
                             beginAtZero: true
