--- a/drivers.html
+++ b/drivers.html
@@ -7,344 +7,294 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
-        :root {
-            --primary-color: #2c3e50;
-            --secondary-color: #34495e;
-            --accent-color: #e74c3c;
-            --text-color: #333;
-            --background-color: #ecf0f1;
-            --white: #ffffff;
-        }
+:root {
+    --primary-color: #2c3e50;
+    --secondary-color: #34495e;
+    --accent-color: #e74c3c;
+    --text-color: #333;
+    --background-color: #ecf0f1;
+    --white: #ffffff;
+}
 
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 
-        body {
-            font-family: 'Roboto', sans-serif;
-            line-height: 1.6;
-            color: var(--text-color);
-            background-color: var(--background-color);
-        }
+body {
+    font-family: 'Roboto', sans-serif;
+    line-height: 1.6;
+    color: var(--text-color);
+    background-color: var(--background-color);
+}
 
-        .container {
-            width: 90%;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
+.container {
+    width: 90%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
 
-        header {
-            background-color: var(--primary-color);
-            color: var(--white);
-            padding: 1rem 0;
-            position: fixed;
-            width: 100%;
-            top: 0;
-            z-index: 1000;
-        }
+header {
+    background-color: var(--primary-color);
+    color: var(--white);
+    padding: 1rem 0;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1000;
+}
 
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0 20px;
-        }
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 15px;
+    flex-wrap: wrap; /* Allow wrapping for smaller screens */
+}
 
-        .logo {
-            font-size: 1.5rem;
-            font-weight: bold;
-            color: var(--white);
-            text-decoration: none;
-        }
+.logo {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: var(--white);
+    text-decoration: none;
+}
 
-        .logo i {
-            margin-right: 10px;
-        }
+nav ul {
+    display: flex;
+    list-style-type: none;
+    flex-wrap: wrap; /* Support wrapping on mobile */
+    gap: 15px; /* Add spacing between list items */
+}
 
-        nav ul {
-            display: flex;
-            list-style-type: none;
-        }
+nav ul li a {
+    color: var(--white);
+    text-decoration: none;
+    font-size: 1rem;
+    padding: 0.5rem;
+    transition: color 0.3s ease;
+}
 
-        nav ul li {
-            margin-left: 20px;
-        }
+nav ul li a:hover {
+    color: var(--accent-color);
+}
 
-        nav ul li a {
-            color: var(--white);
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
+#login-btn {
+    background-color: var(--accent-color);
+    color: var(--white);
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+}
 
-        nav ul li a:hover {
-            color: var(--accent-color);
-        }
+#login-btn:hover {
+    background-color: #c0392b;
+}
 
-        #login-btn, #get-started-btn {
-            background-color: var(--accent-color);
-            color: var(--white);
-            border: none;
-            padding: 0.5rem 1rem;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            font-weight: bold;
-        }
+main {
+    padding: 6rem 0 2rem;
+}
 
-        #login-btn:hover, #get-started-btn:hover {
-            background-color: #c0392b;
-        }
+section {
+    margin-bottom: 4rem;
+}
 
-        main {
-            padding: 6rem 0 2rem;
-        }
+h1, h2, h3 {
+    margin-bottom: 1rem;
+    color: var(--primary-color);
+}
 
-        section {
-            margin-bottom: 4rem;
-        }
+#home {
+    text-align: center;
+    padding: 4rem 0;
+    background-color: var(--secondary-color);
+    color: var(--white);
+}
 
-        h1, h2, h3 {
-            margin-bottom: 1rem;
-            color: var(--primary-color);
-        }
+#home h1 {
+    font-size: 2.2rem; /* Adjusted for mobile readability */
+    margin-bottom: 1rem;
+    color: var(--white);
+}
 
-        #home {
-            text-align: center;
-            padding: 4rem 0;
-            background-color: var(--secondary-color);
-            color: var(--white);
-        }
+#home p {
+    font-size: 1.1rem; /* Adjusted for mobile readability */
+    margin-bottom: 2rem;
+}
 
-        #home h1 {
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
-            color: var(--white);
-        }
+.steps, .benefits-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1.5rem; /* Adjust gap for mobile spacing */
+}
 
-        #home p {
-            font-size: 1.2rem;
-            margin-bottom: 2rem;
-        }
+.step, .benefit-card {
+    background-color: var(--white);
+    padding: 1.5rem; /* Reduced padding for mobile */
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    transition: transform 0.3s ease;
+}
 
-        #get-started-btn {
+.step:hover, .benefit-card:hover {
+    transform: translateY(-5px);
+}
 
-        }
+.step i, .benefit-card i {
+    font-size: 2.5rem; /* Adjust icon size for mobile */
+    color: var(--accent-color);
+    margin-bottom: 1rem;
+}
 
-        .steps, .benefits-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 2rem;
-        }
+#contact form {
+    max-width: 100%; /* Make form fully responsive */
+    margin: 0 auto;
+}
 
-        .step, .benefit-card {
-            background-color: var(--white);
-            padding: 2rem;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            transition: transform 0.3s ease;
-        }
+#contact form input, #contact form textarea {
+    width: 100%;
+    padding: 0.75rem;
+    margin-bottom: 1rem;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    font-size: 1rem; /* Improve input text size */
+}
 
-        .step:hover, .benefit-card:hover {
-            transform: translateY(-5px);
-        }
+#contact form button {
+    background-color: var(--primary-color);
+    color: var(--white);
+    border: none;
+    padding: 0.75rem 1.5rem;
+    font-size: 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
 
-        .step i, .benefit-card i {
-            font-size: 3rem;
-            color: var(--accent-color);
-            margin-bottom: 1rem;
-        }
+#contact form button:hover {
+    background-color: var(--secondary-color);
+}
 
-        #contact form {
-            max-width: 600px;
-            margin: 0 auto;
-        }
+footer {
+    background-color: var(--primary-color);
+    color: var(--white);
+    padding: 1.5rem 0; /* Adjust padding for mobile */
+}
 
-        #contact form label {
-            display: block;
-            margin-bottom: 0.5rem;
-        }
+.footer-content {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); /* Adjust grid for mobile */
+    gap: 1rem; /* Add spacing between sections */
+}
 
-        #contact form input,
-        #contact form textarea {
-            width: 100%;
-            padding: 0.75rem;
-            margin-bottom: 1rem;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-        }
+.footer-section h3 {
+    margin-bottom: 0.5rem;
+    color: var(--white);
+    font-size: 1.2rem; /* Adjust heading size for mobile */
+}
 
-        #contact form button {
-            background-color: var(--primary-color);
-            color: var(--white);
-            border: none;
-            padding: 0.75rem 1.5rem;
-            font-size: 1rem;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
+.footer-section ul {
+    list-style-type: none;
+    padding: 0;
+}
 
-        #contact form button:hover {
-            background-color: var(--secondary-color);
-        }
+.footer-section ul li a {
+    color: var(--white);
+    text-decoration: none;
+    font-size: 0.9rem; /* Adjust link size for mobile */
+    transition: color 0.3s ease;
+}
 
-        footer {
-            background-color: var(--primary-color);
-            color: var(--white);
-            padding: 2rem 0;
-        }
+.footer-section ul li a:hover {
+    color: var(--accent-color);
+}
 
-        .footer-content {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 2rem;
-        }
+.footer-bottom {
+    text-align: center;
+    margin-top: 1rem;
+    font-size: 0.9rem; /* Adjust text size for mobile */
+}
 
-        .footer-section h3 {
-            margin-bottom: 1rem;
-            color: var(--white);
-        }
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    justify-content: center;
+    align-items: center;
+}
 
-        .footer-section ul {
-            list-style-type: none;
-        }
+.popup-content {
+    background-color: var(--white);
+    padding: 1.5rem; /* Adjust padding for mobile */
+    border-radius: 10px;
+    max-width: 90%; /* Allow flexibility for smaller screens */
+    text-align: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
 
-        .footer-section ul li {
-            margin-bottom: 0.5rem;
-        }
+.popup-content h2 {
+    font-size: 1.5rem; /* Adjust heading size for mobile */
+    margin-bottom: 1rem;
+    color: var(--primary-color);
+}
 
-        .footer-section ul li a {
-            color: var(--white);
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
+.popup-content p {
+    margin-bottom: 1rem; /* Adjust spacing */
+    font-size: 1rem; /* Adjust text size */
+}
 
-        .footer-section ul li a:hover {
-            color: var(--accent-color);
-        }
+/* Mobile-Specific Styles */
+@media (max-width: 768px) {
+    nav {
+        flex-direction: column;
+        align-items: flex-start;
+    }
 
-        .social-icons {
-            display: flex;
-            gap: 1rem;
-        }
+    nav ul {
+        flex-direction: column;
+        gap: 10px; /* Adjust gap for mobile nav */
+    }
 
-        .social-icons a {
-            color: var(--white);
-            font-size: 1.5rem;
-            transition: color 0.3s ease;
-        }
+    nav ul li {
+        margin: 0;
+    }
 
-        .social-icons a:hover {
-            color: var(--accent-color);
-        }
+    #login-btn {
+        margin-top: 10px; /* Add spacing for button on mobile */
+    }
 
-        .footer-bottom {
-            text-align: center;
-            margin-top: 2rem;
-            padding-top: 1rem;
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
-        }
+    .steps, .benefits-grid {
+        grid-template-columns: 1fr; /* Single column on small screens */
+    }
 
-        .popup {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            z-index: 1000;
-            justify-content: center;
-            align-items: center;
-        }
+    .step i, .benefit-card i {
+        font-size: 2rem; /* Smaller icons for mobile */
+    }
 
-        .popup-content {
-            background-color: var(--white);
-            padding: 2rem;
-            border-radius: 10px;
-            max-width: 400px;
-            text-align: center;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
+    #home h1 {
+        font-size: 2rem; /* Smaller heading for mobile */
+    }
 
-        .popup-content h2 {
-            color: var(--primary-color);
-            margin-bottom: 1rem;
-        }
+    footer {
+        padding: 1rem;
+    }
 
-        .popup-content p {
-            margin-bottom: 1.5rem;
-        }
+    .footer-section ul li {
+        margin-bottom: 0.25rem;
+    }
+}
 
-        .btn-primary, .btn-secondary {
-            border: none;
-            padding: 0.5rem 1rem;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 1rem;
-            transition: background-color 0.3s ease;
-        }
-
-        .btn-primary {
-            background-color: var(--accent-color);
-            color: var(--primary-color);
-        }
-
-        .btn-primary:hover {
-            background-color: var(--secondary-color);
-            color: var(--white);
-        }
-
-        .btn-secondary {
-            background-color: var(--secondary-color);
-            color: var(--white);
-        }
-
-        .btn-secondary:hover {
-            background-color: var(--primary-color);
-        }
-
-        #login-form label, #login-form input {
-            display: block;
-            width: 100%;
-            margin-bottom: 1rem;
-        }
-
-        #login-form input {
-            padding: 0.5rem;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-        }
-
-        @media (max-width: 768px) {
-            nav {
-                flex-direction: column;
-                align-items: flex-start;
-            }
-
-            nav ul {
-                margin-top: 1rem;
-                flex-direction: column;
-            }
-
-            nav ul li {
-                margin-left: 0;
-                margin-bottom: 0.5rem;
-            }
-
-            #login-btn {
-                margin-top: 1rem;
-            }
-
-            .popup-content {
-                width: 90%;
-                max-width: none;
-            }
-        }
     </style>
 </head>
 <body>
